# game

./: .gitignore  CMakeLists.txt  readme.md
src/: .clang-format  CMakeLists.txt  config.h.in
src/core/: CMakeLists.txt  basetypes.h  core.h  debug.c  debug.h  filesystem.h  macros.h  memory.h  strutils.c  strutils.h  threads.h
src/core/container/: list.h
src/core/math/: minmax.h
src/core/win32/: win32_filesystem.c  win32_private.h  win32_threads.c  win32_winmain.c
src/engine/: CMakeLists.txt
src/engine/common/: common_main.c  common_public.h  cvar.c  extension.h
src/engine/main/: main.c
src/engine/renderer/: r_main.c  r_public.h  renderer_public.h
src/engine/renderer/opengl/: rgl_local.h  rgl_main.c
src/engine/renderer/vulkan/: rvk_main.c
src/engine/sys/: sys_public.h
src/engine/sys/sdl/: sdl_local.h  sdl_main.c
src/engine/sys/win32/: win32_local.h  win32_misc.c  win32_winmain.c
src/tools/: CMakeLists.txt
src/tools/pak/: CMakeLists.txt  pak_main.c
